<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/linearlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_bumdes" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            style="@style/text.header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_1" />

        <TextView
            android:id="@+id/textView12"
            style="@style/text.header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_2" />

        <TextView
            android:id="@+id/textView13"
            style="@style/text.header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>